fix: compilation issues