@@ -48,7 +48,7 @@ public class DocController {
 
     @GetMapping("/public/docs/api/switch")
     public String switchRenderer(HttpServletRequest request) {
-        String renderer = RENDERERS.get(0);
+        String renderer = RENDERERS.getFirst();
         String ref = request.getHeader("Referer");
         if (StringUtils.isNotBlank(ref)) {
             String[] urlComponents = ref.split("[?${symbol_pound}]")[0].split("/");
@@ -139,25 +139,16 @@ public class DocController {
                     yield null;
                 }
             }
-            case NUMBER -> {
-                if (propertyValue instanceof Integer intValue) {
-                    yield IntNode.valueOf(intValue);
-                } else if (propertyValue instanceof Float floatValue) {
-                    yield FloatNode.valueOf(floatValue);
-                } else if (propertyValue instanceof Double doubleValue) {
-                    yield DoubleNode.valueOf(doubleValue);
-                } else if (propertyValue instanceof Long longValue) {
-                    yield LongNode.valueOf(longValue);
-                } else if (propertyValue instanceof Short shortValue) {
-                    yield ShortNode.valueOf(shortValue);
-                } else if (propertyValue instanceof BigInteger bigIntegerValue) {
-                    yield BigIntegerNode.valueOf(bigIntegerValue);
-                } else if (propertyValue instanceof BigDecimal bigDecimalValue) {
-                    yield DecimalNode.valueOf(bigDecimalValue);
-                } else {
-                    yield null;
-                }
-            }
+            case NUMBER -> switch (propertyValue) {
+                case Integer intValue -> IntNode.valueOf(intValue);
+                case Float floatValue -> FloatNode.valueOf(floatValue);
+                case Double doubleValue -> DoubleNode.valueOf(doubleValue);
+                case Long longValue -> LongNode.valueOf(longValue);
+                case Short shortValue -> ShortNode.valueOf(shortValue);
+                case BigInteger bigIntegerValue -> BigIntegerNode.valueOf(bigIntegerValue);
+                case BigDecimal bigDecimalValue -> DecimalNode.valueOf(bigDecimalValue);
+                default -> null;
+            };
             default -> null;
         };
     }
